--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ script:
 
 after_script:
   - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -t 1af4d686-893e-4539-90b4-f7dfc8b24103
