--- a/composer.json
+++ b/composer.json
@@ -51,12 +51,14 @@
                 "Nesiasoft\\Core\\CoreServiceProvider",
                 "Nesiasoft\\Core\\Comments\\CommentsServiceProvider",
                 "Nesiasoft\\Core\\Descriptions\\DescriptionsServiceProvider",
+                "Nesiasoft\\Core\\Emails\\EmailsServiceProvider",
                 "Nesiasoft\\Core\\Notes\\NotesServiceProvider"
             ],
             "aliases": {
                 "Core": "Nesiasoft\\Core\\CoreFacade",
                 "Comments": "Nesiasoft\\Core\\Comments\\CommentsFacade",
                 "Descriptions": "Nesiasoft\\Core\\Descriptions\\DescriptionsFacade",
+                "Emails": "Nesiasoft\\Core\\Emails\\EmailsFacade",
                 "Notes": "Nesiasoft\\Core\\Notes\\NotesFacade"
             }
         }
