--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
                 "Nesiasoft\\Core\\Emails\\EmailsServiceProvider",
                 "Nesiasoft\\Core\\Faxes\\FaxesServiceProvider",
                 "Nesiasoft\\Core\\Notes\\NotesServiceProvider",
-                "Nesiasoft\\Core\\Phones\\PhonesServiceProvider"
+                "Nesiasoft\\Core\\Phones\\PhonesServiceProvider",
+                "Nesiasoft\\Core\\URLs\\URLsServiceProvider"
             ],
             "aliases": {
                 "Core": "Nesiasoft\\Core\\CoreFacade",
@@ -63,7 +64,8 @@
                 "Emails": "Nesiasoft\\Core\\Emails\\EmailsFacade",
                 "Faxes": "Nesiasoft\\Core\\Faxes\\FaxesFacade",
                 "Notes": "Nesiasoft\\Core\\Notes\\NotesFacade",
-                "Phones": "Nesiasoft\\Core\\Phones\\PhonesFacade"
+                "Phones": "Nesiasoft\\Core\\Phones\\PhonesFacade",
+                "URLs": "Nesiasoft\\Core\\URLs\\URLsFacade"
             }
         }
     }
