Create entity: Document

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
                 "Nesiasoft\\Core\\Approvals\\ApprovalsServiceProvider",
                 "Nesiasoft\\Core\\Bookmarks\\BookmarksServiceProvider",
                 "Nesiasoft\\Core\\Comments\\CommentsServiceProvider",
+                "Nesiasoft\\Core\\Documnets\\DocumnetsServiceProvider",
                 "Nesiasoft\\Core\\Emails\\EmailsServiceProvider",
                 "Nesiasoft\\Core\\Faxes\\FaxesServiceProvider",
                 "Nesiasoft\\Core\\Phones\\PhonesServiceProvider",
@@ -70,6 +71,7 @@
                 "Approvals": "Nesiasoft\\Core\\Approvals\\ApprovalsFacade",
                 "Bookmarks": "Nesiasoft\\Core\\Bookmarks\\BookmarksFacade",
                 "Comments": "Nesiasoft\\Core\\Comments\\CommentsFacade",
+                "Documents": "Nesiasoft\\Core\\Documents\\DocumentsFacade",
                 "Emails": "Nesiasoft\\Core\\Emails\\EmailsFacade",
                 "Faxes": "Nesiasoft\\Core\\Faxes\\FaxesFacade",
                 "Phones": "Nesiasoft\\Core\\Phones\\PhonesFacade",
